[metadata]
name = P2PGeocaching
version = 0.0.1
author = Kapilas Gnanarajah, Emmanuel Johny Arackal, Lars Waldvogel
author_email = " kapilas.gnanarajah@stud.unibas.ch, emmanuel.arackal@stud.unibas.ch, lars.waldvogel@stud.unibas.ch
description = Geocaching using peer-to-peer communication
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LarsWaldvogel/P2PGeochaching
project_urls =
    Bug Tracker = https://github.com/LarsWaldvogel/P2PGeochaching
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
